--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "ZachSand",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon",
-    "inspect": "nodemon --inspect src/corr/bot.ts",
+    "dev": "nodemon",
+    "release": "node --loader ts-node/esm ./src/core/bot.ts",
+    "inspect": "nodemon --inspect src/core/bot.ts",
     "test": "jest",
     "lint": "npm run lint:js ",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
@@ -22,7 +23,6 @@
   "dependencies": {
     "axios": "^0.21.4",
     "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0",
     "lowdb": "^3.0.0"
   },
   "devDependencies": {
