--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon",
-    "release": "node --loader ts-node/esm ./src/core/bot.ts",
+    "start": "node --loader ts-node/esm ./src/core/bot.ts",
+    "production-start": "pm2 start .pm2-process.json",
+    "proudction-stop": "pm2 stop .pm2-process.json",
     "inspect": "nodemon --inspect src/core/bot.ts",
     "test": "jest --passWithNoTests",
     "lint": "npm run lint:js ",
@@ -23,7 +25,8 @@
   "dependencies": {
     "axios": "^0.21.4",
     "discord.js": "^13.3.1",
-    "lowdb": "^3.0.0"
+    "lowdb": "^3.0.0",
+    "pm2": "^5.1.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
