--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
     destination: /home/ec2-user/ntm-gaming-team-bot/
 hooks:
   AfterInstall:
-    - location: yarn install && yarn build
+    - location: yarn install
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: yarn production-stop && yarn production-start
+    - location: yarn build && yarn production-stop && yarn production-start
       timeout: 300
       runas: root
