--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "bracketSpacing": true,
-  "printWidth": 160,
-  "semi": true,
-  "singleQuote": false,
-  "tabWidth": 4,
+  "singleQuote": true,
   "trailingComma": "all",
-  "useTabs": true
+  "jsxBracketSameLine": true,
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true
 }
