--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "displayName": "NTM Gaming Team Bot",
   "description": "NTM Gaming Team bot",
   "version": "0.0.1",
-  "exports": "./src/core/bot.ts",
-  "publishConfig": {
-    "access": "restricted"
+  "exports": "./build/src/bot.js",
+  "engines": {
+    "node": ">=17.0.0"
   },
   "type": "module",
   "author": "ZachSand",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon",
-    "start": "node --loader ts-node/esm ./src/core/bot.ts",
+    "start": "node --loader ts-node/esm src/bot.ts",
     "production-start": "pm2 start .pm2-process.json",
     "production-stop": "pm2 stop .pm2-process.json",
-    "inspect": "nodemon --inspect src/core/bot.ts",
+    "inspect": "nodemon --inspect src/bot.ts",
     "test": "jest --passWithNoTests",
     "lint": "npm run lint:js ",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
@@ -23,25 +23,30 @@
     "lint:fix": "npm run lint:js -- --fix"
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "discord.js": "^13.3.1",
+    "axios": "^0.24.0",
+    "discord.js": "^13.4.0",
     "lowdb": "^3.0.0",
     "pm2": "^5.1.2"
   },
   "devDependencies": {
+    "@sindresorhus/tsconfig": "^2.0.0",
+    "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^27.0.3",
     "@types/lowdb": "^1.0.11",
     "@types/node": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.5",
     "json": "^11.0.0",
-    "markserv": "^1.17.4",
     "nodemon": "^2.0.15",
-    "prettier": "^2.3.2",
+    "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
