--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,16 @@
 {
-  "compileOnSave": true,
+  "extends": "@sindresorhus/tsconfig/tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": [
-      "ES2020",
-      "DOM"
-    ],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
+    "outDir": "build",
+    "module": "ESNext",
+    "target": "esnext",
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Node",
-    "module": "ES2020",
-    "pretty": true,
-    "sourceMap": true,
-    "outDir": "./build",
-    "allowJs": true,
-    "noEmit": false,
-    "esModuleInterop": true
+    "resolveJsonModule": true
   },
   "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "tests"
+    "./package.json",
+    "src/**/*",
+    "databases/*.json"
   ]
 }
