--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "axios": "^0.24.0",
     "discord.js": "^13.4.0",
     "lowdb": "^3.0.0",
-    "pm2": "^5.1.2"
+    "pm2": "^5.1.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@sindresorhus/tsconfig": "^2.0.0",
