--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "discord.js": "^13.4.0",
+    "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
     "pm2": "^5.1.2",
     "winston": "^3.3.3"
