--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
   - source: .
     destination: /home/ec2-user/ntm-gaming-team-bot/
+    owner: ec2-user
 hooks:
   ApplicationStart:
     - location: yarn install && yarn build && yarn production-deploy
