--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,7 @@ files:
   - source: .
     destination: /home/ec2-user/ntm-gaming-team-bot/
     owner: ec2-user
+    group: ec2-user
 hooks:
   ApplicationStart:
     - location: /home/ec2-user/ntm-gaming-team-bot/scripts/deploy.sh
@@ -13,6 +14,7 @@ permissions:
   - object: /home/ec2-user/ntm-gaming-team-bot/
     pattern: "**"
     owner: ec2-user
+    group: ec2-user
     mode: 755
     type:
       - file
